# flutter_midi_16kb

./: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  midi_player.cpp
android/src/main/kotlin/com/example/flutter_midi_16kb/: FlutterMidi16kbPlugin.kt
android/src/test/kotlin/com/example/flutter_midi_16kb/: FlutterMidi16kbPluginTest.kt
example/: README.md  pubspec.yaml  verify_16kb_complete.sh
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_midi_16kb_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_midi_16kb.podspec
ios/Classes/: FlutterMidi16kbPlugin.swift
lib/: flutter_midi_16kb.dart  flutter_midi_16kb_method_channel.dart  flutter_midi_16kb_platform_interface.dart
